# fastapi-todo-app

./: README.md  pyproject.toml
fastapi_todo_app/: app.py
tests/: conftest.py  test_app.py
